ADD cloudformation template and automention script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
    node:
      build:
@@ -9,3 +9,10 @@ services:
      command: sh -c "cd react-sample && yarn start"
      ports:
       - "3000:3000"
+   appbuild:
+     build:
+       context: .
+       dockerfile: Dockerfile
+     volumes:
+      - ./:/app
+     command: sh -c "cd react-sample && yarn build"
